# 2UV-Project-Unix

./: 2UV-project.ppt  31-03-2026.pg_dump  CMakeLists.txt  README.txt
AppStartup/: CMakeLists.txt
CycleBuilder/: CMakeLists.txt
DatabaseEditor/: CMakeLists.txt
DatabaseEditor/BINDIR/: backup-03-22-2026
GraphClient/: 2UVGraphView.xml  CMakeLists.txt  SConscript  clGraphView.cpp  clGraphView.h  clMainWindow.cpp  clQuery.cpp  clQuery.h  moc_clExportToCsvUI.cpp
LogServer/: CMakeLists.txt
ObjectViewer/: CMakeLists.txt  Indicator.h  SConscript  Track.h  clGraphicsItem.cpp  clGraphicsItem.h  clGraphicsScene.cpp  clGraphicsScene.h  clGraphicsView.cpp  clGraphicsView.h  clMainWindow.cpp  clMainWindow.h  clObject.cpp  clObject.h  clObjectLocator.cpp  clObjectLocator.h  clSchedulePlanner.cpp  clSchedulePlanner.h  clTimeLine.cpp  clTimeLine.h  classConfigurationView_01.xml  enums.xml  moc_clGraphicsItem.cpp  wdChangePropertieText.h  wdObjectLocator.ui  wdSchedulePlanner.ui
Server/: CMakeLists.txt  DatabaseStructure.xml  ICE_ServerApplication.ice  clDatabasePostgres.cpp
ServerTest/: CMakeLists.txt  SConscript  clCycleView.cpp  clCycleView.h  clLivingObject.cpp  clLivingObject.h  clLivingObjectMach.cpp  clLivingObjectMeasure.cpp  clLivingObjectMeasure.h  clObject.cpp  clParameterView.cpp  clParameterView.h  clWorkstationCycle.cpp  clWorkstationCycle.h  clWorkstationCycles.cpp  clWorkstationCycles.h
SocketBox/: CMakeLists.txt
SocketSimulator/: clSocketBoxSimulator.py  clSocketBoxSimulatorMeasureDevice.py
